--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="img/jocker.ico">
 	<title>Video Popup</title>
 </head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
