--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 
 	<div class="trailer">
-		<video src="img/wildlife.mp4" controls="true"></video>
+		<video src="img/Wildlife.mp4" controls="true"></video>
 		<img src="img/close.png" class="close" onclick="toggle();">
 	</div>
 
