--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="shortcut icon" href="img/jocker.ico">
-	<title>Video Popup</title>
+	<title>JokeTeller</title>
 </head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
