--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 			<a href="#" class="play" onclick="toggle();"><img src="img/play.png">Watch Trailer</a>
 			<div class="slide"></div>
 			<ul class="sci">
-				<li><a href="#"><img src="img/facebook.png"></a></li>
-				<li><a href="#"><img src="img/twitter.png"></a></li>
-				<li><a href="#"><img src="img/instagram.png"></a></li>
+				<li><a href="https://www.facebook.com/Dipsique"><img src="img/facebook.png"></a></li>
+				<li><a href="https://twitter.com/DipseyE"><img src="img/twitter.png"></a></li>
+				<li><a href="https://www.instagram.com/enesshalaa/"><img src="img/instagram.png"></a></li>
 			</ul>
 		</div>
 	</div>
